Fix vertical align to more of 1 line

--- a/css/styles.css
+++ b/css/styles.css
@@ -418,6 +418,7 @@ SIDENAV MENU:
   font-size: 18px;
   cursor: pointer;
   fill: #98989F;
+  display: table;
 }
 .menu-item svg {
   transform: rotate(180deg);
@@ -426,7 +427,9 @@ SIDENAV MENU:
 .menu-item span {
   font-size: 15px;
   font-weight: 700;
-  line-height: 25px;
+  line-height: 18px;
+  padding-right: 10px;
+  padding-left: 10px;
   vertical-align: top;
 }
 .menu-item .title-level:hover {
@@ -435,10 +438,11 @@ SIDENAV MENU:
   fill: #fff;
 }
 .menu-item i:first-child {
-  margin-right: 10px;
   width: 25px;
   text-align: center;
   font-size: 20px;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .second-level {
